apps/jobs/argo-workflows/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.mirceanton.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
spec:
  hostnames: ["argo-workflows.admin.mirceanton.com"]
  parentRefs:
    - name: envoy-admin
      namespace: network-system
  rules:
    - backendRefs:
        - name: argo-workflows-server
          namespace: jobs
          port: 2746
